<resources>
    <string name="app_name">Language_app</string>
    <string name="onboarding_1_next_button">Next</string>
    <string name="onboarding_2_more_button">More</string>
    <string name="onboarding_3_choose_lang_button">Choose a language</string>
    <string name="skip_onboarding">Skip onboarding</string>
    <string name="choose_lang_title">Language select</string>
    <string name="whats_your_language">What is your Mother language?</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="belarus">Belarus</string>
    <string name="kazakh">Kazakh</string>
    <string name="choose">Choose</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="loginTextView1">For free, join now and\nstart learning</string>
    <string name="loginEmail">Email Address</string>
    <string name="loginPass">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="Continue">Continue</string>
    <string name="guess_the_animal">Guess the animal</string>
    <string name="next">Next</string>
    <string name="try_again">Try again</string>
    <string name="word_practice">Word practice</string>
    <string name="listening">Listening</string>
    <string name="kju_k_mb">[ \'kju:kʌmbə ]</string>
    <string name="check_my_speech">Check my speech</string>
    <string name="cucumber">cucumber</string>
    <string name="please_press_button_and_say_this_nword_our_service_will_check_your_pronunciation">Please press button and say this\nword. Our service will check your pronunciation</string>
    <string name="catEmoji">😿</string>
    <string name="eh_wrong_answer">Eh? Wrong answer :(</string>
    <string name="that_is_racoon">That is: Racoon</string>
    <string name="winEmoji">🎉</string>
    <string name="holy_molly_that_is_right">Holy Molly! That is Right!</string>
    <string name="check">Check</string>
    <string name="write_who_is_on_image">Write who is on image</string>
    <string name="email">Email</string>
    <string name="not_you_member">Not you member?</string>
    <string name="you_can_use">You can use</string>
    <string name="sign_in">sign in</string>
    <string name="google_for">Google for</string>
    <string name="hello_user">Hello, User</string>
    <string name="top_users">Top users</string>
    <string name="available_exercise">Available exercise</string>
    <string name="are_you_ready_for_learning_today">Are you ready for learning today?</string>
    <string name="confidence_in_your_words">Confidence in your words</string>
    <string name="with_conversation_based_learning_n_you_ll_be_talking_from_lesson_one">With conversation-based learning,\n you\'ll be talking from lesson one</string>
    <string name="develop_a_habit_of_learning_and_n_make_it_a_part_of_your_daily_routine">Develop a habit of learning and,\n make it a part of your daily routine</string>
    <string name="take_your_time_to_learn">Take your time to learn</string>
    <string name="using_a_variety_of_learning_styles_to_learn_n_and_retain">Using a variety of learning styles to learn\n and retain</string>
    <string name="the_lessons_you_need_to_learn">The lessons you need to learn</string>
    <string name="change_mother_language">Change mother language</string>
    <string name="change_your_image">Change your image</string>
    <string name="switch_to_dark">Switch to dark</string>
    <string name="your_profile_user">Your profile, User</string>
    <string name="already_you_member">Already you member?</string>
    <string name="your_first_name">Your first name</string>
    <string name="your_last_name">Your last name</string>
    <string name="create_an_account">Create an Account</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="muxa">Муха</string>
    <string name="gardener">gardener</string>
</resources>