<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <Button
        style="@style/selectBlueButton"
        android:id="@+id/changeLangButton"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded_blue"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/change_mother_language"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/choose_button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/selectBlueButton"
        android:id="@+id/choose_button3"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded_blue"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/change_your_image"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/choose_button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/selectBlueButton"
        android:id="@+id/choose_button4"
        android:layout_marginBottom="8dp"
        android:text="@string/switch_to_dark"
        app:layout_constraintBottom_toTopOf="@+id/changeLangButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/choose_button5"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_rounded_gray"
        android:fontFamily="@font/fredoka_semibold"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:letterSpacing="0.01"
        android:textAllCaps="false"
        android:textSize="20sp"/>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarLogin"
        android:layout_width="413dp"
        android:layout_height="222dp"
        android:background="#410FA3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="28dp"

        android:layout_marginTop="172dp"
        android:fontFamily="@font/fredoka_medium_regular"
        android:text="@string/your_profile_user"
        android:textColor="@color/white"

        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topAppBarLogin" />

    <ImageView
        android:id="@+id/imageAvatar2"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/gray_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>